# cs553project

./: .gitignore  README.md  abstraction.go  collect_client_data.sh  collect_client_data_monolith.sh  collect_remote_data.sh  deploy.sh  docker-compose.yml  game.html  generate_certs.sh  measure.sh  monolithic_plot.py  run.sh  terraform.tfstate
FlappyBirdClone/: go.mod  go.sum  main.go  main.go.bak  setup.sh
FlappyMusicService/: README.txt  client.go  go.mod  go.sum  server.go
backend/: .gitignore  DOCS.md  Dockerfile  Makefile  buf.gen.yaml  buf.yaml  go.mod  go.sum  users.json
client-automation/: NOTES.md  pyproject.toml
client-automation/data/20250509_014928/client_seed_8525333463046388971_run_1/: extra_data.json
client-automation/input_logger/: Cargo.toml  inputs_8525333463046388971.csv
client-automation/input_logger/src/: main.rs
client-automation/input_seeds/: 6977347407732442987.csv  8525333463046388971-score35.csv  8525333463046388971.csv
client-automation/src/: input_simulator.py
client-automation/stat/20250509_014928/client_seed_8525333463046388971_run_1/: extra_data.json
client-automation/stat/20250509_014928/client_seed_8525333463046388971_run_2/: extra_data.json
client-automation/stat/20250509_014928/client_seed_8525333463046388971_run_3/: extra_data.json
data/: backend_calculation.py  frontend_calculation.py
flap-client/: .env  .env.microservices  .env.monolith  .env.sample  Dockerfile  NOTES.md  buf.gen.yaml  index.html  nginx.conf  package-lock.json  package.json
src/: style.css  vite-env.d.ts
terraform/: .gitignore  main.tf  (+6 more)
(+302 files in other folders)
